# DRIVE

./: .env.example  .gitignore  Makefile  NOTICE  README.md  eval_webarena.py  extract_trajectory.py  pyproject.toml  requirements.txt
AgentOccam/: AgentOccam.py  drive.py  env.py  eval_utils.py  obs_opt.py  operation_level_matcher.py  skill_prompt_injector.py  skill_registry.py  skill_runtime.py  utils.py
AgentOccam/configs/: AgentOccam.yml
AgentOccam/llms/: gemini.py  gpt.py  llama.py
AgentOccam/prompts/: AgentOccam_prompt.py
browser_env/: actions.py  envs.py  processors.py
browser_env/html_tools/: html_parser.py
data/splits/: final_historical_evaluation_ids_seed42.json
evaluation_harness/: evaluators.py  helper_functions.py
llms/: __init__.py  lm_config.py  tokenizers.py  utils.py
llms/providers/: anthropic_utils.py  openai_utils.py
scripts/: build_skills.sh  evolve_skills.sh  run_webarena.sh
tools/: llm_helpers.py  verify_skill_snippets.py
tools/site_specific/: analyze_gitlab_failures_v2.py  analyze_map_failures_v2.py  analyze_reddit_failures_v2.py  analyze_shopping_admin_failures_v2.py  analyze_shopping_failures_v2.py  build_skill_feedback_kb.py  drive_artifacts.py  failure_attribution.py  gitlab_skill_generator_v3.py  manage_drive_library.py  map_skill_generator_v3.py  patch_interaction_skills.py  reddit_skill_generator_v3.py  shopping_admin_skill_generator_v3.py  shopping_skill_generator_v3.py  site_skill_generator_v3.py  site_skill_pipeline.py  site_skill_profiles.py  skill_pool.py  skill_quality.py
(+4 files in other folders)
